# RustAcademy

./: .gitignore  CONTRIBUTING.md
BackendAcademy/: .gitignore  (+1 more)
app/contract/contracts/Folder/: Cargo.toml  check_output.txt
app/contract/contracts/Folder/docs/: AUTHORIZATION_GUARDS.md
app/contract/contracts/Folder/src/: admin.rs  commitment.rs  commitment_test.rs  errors.rs  escrow.rs  events.rs  fee.rs  fee_router.rs  fee_router_test.rs  guard_test.rs  lib.rs  privacy.rs  stealth.rs  storage.rs  storage_test.rs  test.rs  types.rs  upgrade_test.rs
app/contract/contracts/Folder/test_snapshots/bench_test/: bench_deposit.1.json  bench_deposit_with_commitment.1.json  bench_resolve_dispute_recipient.1.json  bench_set_privacy.1.json  bench_withdraw.1.json
app/contract/contracts/Folder/test_snapshots/coverage_test/: test_assert_helpers_commitment_valid_and_invalid.1.json  test_assert_helpers_disputed_and_refunded.1.json  test_assert_helpers_pending_and_spent.1.json  test_demo_admin_lifecycle_under_10_lines.1.json  test_demo_dispute_flow_under_10_lines.1.json  test_demo_expiry_and_refund_under_10_lines.1.json  test_demo_fee_withdrawal_under_10_lines.1.json  test_demo_full_lifecycle_under_10_lines.1.json  test_demo_privacy_toggle_under_10_lines.1.json  test_deposit_with_commitment_duplicate_fails.1.json  test_deposit_with_commitment_paused_feature_fails.1.json  test_deposit_with_commitment_with_arbiter_stores_arbiter.1.json  test_enable_privacy_history_appends_newest_first.1.json  test_enable_privacy_is_per_account.1.json  test_enable_privacy_level_zero_is_valid.1.json  (+4 more)
(+565 files in other folders)
