[package]
name = "RustAcademy"
version = "0.1.0"
edition = "2021"
description = "X-Ray privacy Soroban contract for  RustAcademy"
license = "MIT OR Apache-2.0"
authors = ["RustAcademy Team"]
repository = "https://github.com/ RustAcademy/app"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23"

[dev-dependencies]
soroban-sdk = { version = "23", features = ["testutils"] }
proptest = { version = "1.5.0", default-features = false, features = ["std"] }


